cabal-version: 3.8
name: aoc23
version: 0.1

common shared
  ghc-options: -Wall
  default-language: GHC2021
  default-extensions:
    LambdaCase
  build-depends:
    base,
    containers

library
  import: shared
  hs-source-dirs: helpers
  exposed-modules:
    AOC.IO

executable day1
  import: shared
  main-is: Day1.hs
  hs-source-dirs: exe
  build-depends: aoc23

executable day2
  import: shared
  main-is: Day2.hs
  hs-source-dirs: exe
  build-depends: aoc23

executable day3
  import: shared
  main-is: Day3.hs
  hs-source-dirs: exe
  build-depends: aoc23

executable day4
  import: shared
  main-is: Day4.hs
  hs-source-dirs: exe
  build-depends: aoc23
  
executable day5
  import: shared
  main-is: Day5.hs
  hs-source-dirs: exe
  build-depends: aoc23

executable day6
  import: shared
  main-is: Day6.hs
  hs-source-dirs: exe
  build-depends: aoc23

executable day7
  import: shared
  main-is: Day7.hs
  hs-source-dirs: exe
  build-depends: aoc23

executable day8
  import: shared
  main-is: Day8.hs
  hs-source-dirs: exe
  build-depends: aoc23

executable day9
  import: shared
  main-is: Day9.hs
  hs-source-dirs: exe
  build-depends: aoc23

executable day10
  import: shared
  main-is: Day10.hs
  hs-source-dirs: exe
  build-depends: aoc23
